# os-dev

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  kernel.c  linker.ld
arch/: CMakeLists.txt
arch/aarch64/: CMakeLists.txt  Makefile  boot.s  kernel
arch/x86/: CMakeLists.txt  Makefile  boot.s  kernel.c  linker.ld
toolchains/: aarch64_clang.cmake  x86_clang.cmake
